# CredResearch

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_GENERATION_PROMPT.md  GETTING_STARTED.md  README.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ai-worker.yml  backend.yml  changelog.yml  contract.yml  deploy-gcp.yml  release.yml  rollback-gcp.yml  security.yml  web.yml
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: AI_SYSTEM_DESIGN.md  API_SPECIFICATION.md  DATABASE_SCHEMA.md  DEPLOYMENT_AND_INFRASTRUCTURE.md  ENGINEERING_DECISIONS.md  ERD.md  FUNCTIONAL_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  MVP_ROADMAP.md  NON_FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md  REPO_STRATEGY.md  SECURITY_AND_COMPLIANCE.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_SPECIFICATION.md  TEST_STRATEGY.md
infra/: docker-compose.yml
services/ai-worker/: .dockerignore  Dockerfile  pyproject.toml
services/ai-worker/app/: ARCHITECTURE.md  main.py
services/ai-worker/app/core/: config.py
services/ai-worker/app/domain/: schemas.py
services/ai-worker/app/interfaces/routers/: ai.py  analysis.py  export.py  health.py  papers.py  similarity.py
services/ai-worker/app/services/: ai_features.py  analyze.py  docx_export.py  extract.py  llm_gateway.py  similarity.py
services/ai-worker/tests/: test_ai.py  test_health.py
services/backend/: Dockerfile  build.gradle  settings.gradle
services/collab/: Dockerfile  package.json
(+353 files in other folders)
